[fix] Table active buttons overlapping issue with dropdown; fixes #638
Former-commit-id: 908c8413e5a8f48d70cacfac982ebae24bc21f14

--- a/opsiweb/uib-components/static/themes/opsi.css
+++ b/opsiweb/uib-components/static/themes/opsi.css
@@ -2314,7 +2314,7 @@ textarea.form-control{
   z-index:1
 }
 .btn-group-vertical > .btn.active,.btn-group-vertical > .btn:active,.btn-group-vertical > .btn:focus,.btn-group > .btn.active,.btn-group > .btn:active,.btn-group > .btn:focus{
-  z-index:1
+  z-index:auto
 }
 .btn:not(.disabled):not(.border-0),.btn:not(.border-0){
   border:1px solid var(--border) !important
